<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SIS-Ursula</string>
    <string name="menu_settings">Setting</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="user_name">User Name:</string>
    <string name="old_pwd">Password Awal:</string>
    <string name="new_pwd">Password Baru:</string>
    <string name="new_pwd2">Input Ulang Password Baru:</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="forgot_pwd">Lupa Password?</string>
    <string name="login">LOGIN</string>
    <string name="login_page">Please login.</string>
    <string name="subject">Mata Pelajaran</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="reset_pwd_desc">Password baru akan dikirim ke email Anda, silakan cek Inbox email Anda lalu login kembali menggunakan password baru.</string>
    <string name="change_pwd">Ubah Password</string>
    <string name="change_pwd_desc">Password Anda berhasil diubah, silakan login kembali menggunakan password baru.</string>
    <string name="resend_pwd">Kirim Ulang Password</string>
    <string name="forgot_pwd_msg">Password akan dikirim ke email Anda, silakan cek Inbox email Anda lalu login kembali menggunakan password baru.</string>
    <string name="nilai_harian">NILAI HARIAN</string>
    <string name="nilai_rapor">NILAI RAPOR</string>
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_harian_items">
        <item >Nilai Harian</item>
        <item >Nilai Rapor</item>
        <item >Update Profile</item>
        <item >Ubah Password</item>
        <item >Logout</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_harian_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
    </array>
    
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_rapor_items">
        <item >Nilai Rapor</item>
        <item >Nilai Harian</item>
        <item >Update Profile</item>
        <item >Ubah Password</item>
        <item >Logout</item>
    </string-array>
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_rapor_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <string-array name="tabs_title">
        <item >Test Tertulis</item>
        <item >Test Lisan</item>
        <item >Tugas</item>
        <item >Unjuk Kerja</item>
        <item >Demonstrasi</item>
        <item >Proyek</item>
        <item >Portfolio</item>
    </string-array>
</resources>
