<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <View
        android:id="@+id/v_line"
        android:layout_width="fill_parent"
        android:layout_height="16dp"
        android:background="#DFB056" />
    
    <ImageView 
        android:src="@drawable/logo_ursula"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        />
    
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_name"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="anastasia.calista"
        android:singleLine="true"
        android:ems="10">
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:text="@string/password"
        android:textColor="#000000"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_rounded_bg"
        android:enabled="true"
        android:text="@string/login"
        android:textColor="#000000"
        android:textStyle="bold"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal" >
		    <TextView
		        android:id="@+id/tv_changepwd"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="16dp"
		        android:textStyle="bold"
		        android:ems="10"
		        android:text="Ubah Password"
		        android:gravity="center|left"
		        android:textColor="#000000"/>
    	</LinearLayout>
	
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="horizontal" >
		    <TextView
		        android:id="@+id/tv_forgotpwd"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_margin="16dp"
		        android:textStyle="bold"
		        android:ems="10"
		        android:text="@string/forgot_pwd"
		        android:gravity="center|right"
		        android:textColor="#000000"/>
    	</LinearLayout>
    </LinearLayout>
    
    <View
        android:id="@+id/v_line"
        android:layout_width="fill_parent"
        android:layout_height="16dp"
        android:background="#DFB056" />
</LinearLayout>